required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed Oracle FastCGI memory leak (#3187)
 
- layer->project flag not being reset properly for drawquerylayer (#673 #2079)

- OGC SLD: support multi-polygons geometries for filters embedded in an SLD (#3097)

- [WMC] embedded SLD in context does not work with namespace prefix (#3115)

- Support name aliases used in sld text symbolizer (#3114)

- decode html and unicode entities for polygon truetype symbol fills (#3203)

- Parse PropertyName parameter for wfs requests (#675)

- Fixed when saving a map, layer->transform isn't written properly in all cases. (#3198)

- Fixed buffer overflow in oracle spatial driver with large sql data (#2694)

- Improve FastCGI include file finding logic (#3200)


Version 5.6.0-beta5 (2009-11-04):
---------------------------------

- Apply a minimum width on label outline (new outlines were too thin by default)

- Don't apply scalefactor to polygon outline widths (but apply the 
  resolutionfactor)

- Fix vector symbol size calculation (#2896)

- Applied code clean up patch for mapsearch.c. (#3189)

- Fixed labels centering when the label is longer than the line (#2867)

- Ensure Python MapScript building doesn't reorder the libraries, support the 
  'subprocess' module where available for setup.py, and default to using the 
  "super" swig invocation described in the Python MapScript README when 
  mapscript_wrap.c isn't available on the file system.  #2663 contains the 
  reordering issue.

- Fixed memory leak with shapefiles associated with one-pass query 
  implementation (#3188)

- Fix abs/fabs usage that prevented angle follow labels to be discarded if 